# cppftw

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
include/cppftw/: cppftw.h
script/: appveyor.ps1  codecov.sh  travis.sh
src/cppftw/: cppftw.cc
test/: CMakeLists.txt  cppftw_test.cc  main.cc
